--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,20 +1,20 @@
 
-
 @import "_variables";
-@import "_mixins";
 @import "_base";
-@import "block/_heading";
+@import "_mixins";
 @import "block/_about";
 @import "block/_button";
+@import "block/_catalog";
+@import "block/_container";
+@import "block/_copyright";
+@import "block/_favorites";
+@import "block/_font-face";
+@import "block/_heading";
 @import "block/_main-nav";
 @import "block/_page-top";
 @import "block/_proposals";
-@import "block/_favorites";
+@import "block/_product-card";
 @import "block/_page-header";
 @import "block/_page-footer";
-@import "block/_container";
+@import "block/_social-list";
 @import "block/_visually-hidden";
-@import "block/_copyright";
-@import "block/social-list";
-@import "block/_product-card";
-@import "block/_catalog";
