--- a/source/sass/block/_main-nav.scss
+++ b/source/sass/block/_main-nav.scss
@@ -3,7 +3,6 @@
   background-color: $bg-main;
   position: relative;
   margin: auto;
-}
 
   .main-nav__button {
     display: flex;
@@ -13,6 +12,7 @@
     width: 60px; /* Временный размер*/
     height: 20px;
   }
+
   .main-nav__wrapper {
     margin-left: 30px;
     margin-right: 30px;
@@ -25,6 +25,7 @@
     vertical-align: middle;
     list-style: none;
   }
+
   .main-nav__item {
     width: 100%;
     min-height: 79px;
@@ -33,16 +34,17 @@
   }
 
   .main-nav__link {
-    color: black;
+    color: $color-txt-main;
     font-size: 17px;
     font-weight: 700;
     line-height: 1.41;
-    /*
+
     &:hover {
       color: $color-txt-main-hover;
     }
 
     &:active {
       color: $color-txt-main-active;
-    }*/
+    }
   }
+}
