--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,11 +9,13 @@
 @import "block/_copyright";
 @import "block/_favorites";
 @import "block/_font-face";
+@import "block/_form";
 @import "block/_heading";
 @import "block/_main-nav";
 @import "block/_page-top";
 @import "block/_proposals";
 @import "block/_product-card";
+@import "block/_production";
 @import "block/_page-header";
 @import "block/_page-footer";
 @import "block/_social-list";
