--- a/source/sass/block/_page-header.scss
+++ b/source/sass/block/_page-header.scss
@@ -4,7 +4,17 @@
   background-color: $bg-main;
 
   .page-header__logo {
-    height: 79px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    text-align: center;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -13,19 +23,24 @@
     padding-right: 50px;
 
     .page-header__logo {
-      display: flex;
-      height: 88px;
+      min-height: 88px;
       width: 320px;
       order: 1;
+      padding-top: 22px;
+      margin: 0;
+      text-align: left;
     }
   }
 
   @media (min-width: $desktop-width) {
-    width: 1200px;
+    width: 1150px;
 
     .page-header__logo {
-      width: 300px;
+      width: 312px;
       order: 2;
+      text-align: center;
+      padding-top: 8px;
+      padding-right: 39px;
     }
   }
 }
