--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,17 +5,20 @@
 @import "block/_about";
 @import "block/_button";
 @import "block/_catalog";
+@import "block/_contacts";
 @import "block/_container";
 @import "block/_copyright";
 @import "block/_favorites";
 @import "block/_font-face";
 @import "block/_heading";
 @import "block/_main-nav";
+@import "block/_modal";
 @import "block/_page-top";
 @import "block/_proposals";
 @import "block/_product-card";
 @import "block/_production";
 @import "block/_page-header";
 @import "block/_page-footer";
+@import "block/_reviews";
 @import "block/_social-list";
 @import "block/_visually-hidden";
