--- a/source/sass/_base.scss
+++ b/source/sass/_base.scss
@@ -10,8 +10,10 @@ html {
 }
 
 body {
+  min-width: 320px;
   font-family: "Open Sans", "Arial", sans-serif;
   margin: 0;
+  padding: 0;
 }
 
 img {
