--- a/source/sass/block/_button.scss
+++ b/source/sass/block/_button.scss
@@ -1,6 +1,6 @@
 .btn {
   display: inline-block;
-  width: 292px;
+  width: 260px;
   height: 52px;
   border: solid 2px $color-btn-border;
   text-transform: uppercase;
@@ -9,19 +9,59 @@
   line-height: 1.18;
   text-align: center;
   vertical-align: middle;
+  padding-top: 14px;
 
   &--white {
     color: $color-text-paragraph;
     background-color: $bg-main;
 
     &:hover {
-      color: $color-text-main;
+      color: $color-text-add;
       background-color: $color-btn-main-hover;
     }
 
     &:active {
-      color: $color-text-main-active;
-      background-color: $color-btn-main-hover;
+      color: $color-text-add-active;
+      background-color: $color-text-paragraph;
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 292px;
+  }
+}
+
+.btn__slider {
+  display: inline-flex;
+  width: 130px;
+  height: 50px;
+  border: 1px solid #ececec;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &--back {
+    background-image: url("../img/icon-left-arrow.svg");
+  }
+
+  &--frwd {
+    background-image: url("../img/icon-right-arrow.svg");
+  }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 86px;
+    height: 40px;
+    border: none;
   }
 }
