--- a/source/sass/block/_proposals.scss
+++ b/source/sass/block/_proposals.scss
@@ -1,41 +1,30 @@
 .proposals {
-  width: 320px;
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 34px;
+  margin: 0 auto;
+  width: 320px;
 
   .proposals__list {
     list-style: none;
-    width: 100%;
-    margin-top: 0;
+    margin-bottom: 0;
+    margin-top: -26px;
     padding: 0;
-  }
-
-  .proposals__item {
-    padding-top: 30px;
-    text-align: left;
-    height: 103px;
-
-    &--interior {
-      background-color: $color-btn-add1;
-    }
-
-    &--toys {
-      background-color: $color-btn-add2;
-    }
+    height: 206px;
   }
 
   .proposals__link {
+    @include container320;
+    min-height: 103px;
     display: flex;
     flex-wrap: wrap;
-    width: 110px;
     font-size: 19px;
     font-weight: 700;
     line-height: 1.26;
     color: #ffffff;
     text-decoration: none;
+    position: relative;
+    padding-top: 26px;
+    text-align: left;
 
     &--interior {
       background-color: $color-btn-add1;
@@ -43,31 +32,132 @@
 
     &--toys {
       background-color: $color-btn-add2;
-      margin-bottom: 34px;
+    }
+
+    &--text {
+      width: 100px;
     }
   }
-}
 
-@media (min-width: $tablet-width) {
-  .proposals {
-    width: 768px;
-    margin-top: -119px;
-    padding-left: 50px;
-    padding-right: 50px;
+  .proposals__link--interior:hover {
+    transform: translateY(-5px);
+    background-color: $color-btn-add1-hover;
+    height: 108px;
+    margin-bottom: -5px;
   }
 
-  .proposals__list {
-    display: flex;
+  .proposals__link--toys:hover {
+    transform: translateY(-5px);
+    background-color: $color-btn-add2-hover;
+    height: 108px;
+    margin-bottom: -5px;
   }
 
-  .proposals__item {
-    width: 50%;
-    display: flex;
+  .proposals__link--interior svg {
+    position: absolute;
+    opacity: 0.5;
+    right: 36px;
+    top: 24px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .proposals {
-    width: 1200px;
+  .proposals__link--toys svg {
+    position: absolute;
+    opacity: 0.5;
+    right: 26px;
+    top: 20px;
+  }
+
+  .proposals__link--interior,
+  .proposals__link--toys {
+    &:hover svg {
+      opacity: 0.7;
+    }
+
+    &:active svg {
+      opacity: 0.3;
+    }
+
+    &:active span {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    @include container768;
+    margin-top: -145px;
+
+    .proposals__list {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      height: 119px;
+      position: relative;
+
+      &::after {
+        @include pseudo;
+        background-image: url("../img/bg-zigzag-fill.svg");
+        bottom: -12px;
+        left: 0;
+        height: 24px;
+        width: 768px;
+        background-size: 768px 26px;
+        background-position: 28px;
+      }
+    }
+
+    .proposals__link {
+      font-size: 20px;
+      line-height: 1.5;
+      text-align: left;
+      width: 335px;
+      display: flex;
+      min-height: 119px;
+      padding-left: 36px;
+      padding-top: 28px;
+
+      &--interior svg {
+        right: 35px;
+        top: 30px;
+      }
+
+      &:hover {
+        min-height: 124px;
+      }
+
+      &--toys svg {
+        right: 34px;
+        top: 31px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    @include container1150;
+    margin-top: -145px;
+
+    .proposals__link {
+      width: 525px;
+
+      &--interior svg {
+        left: 449px;
+      }
+
+      &--toys svg {
+        left: 430px;
+        top: 34px;
+      }
+    }
+
+    .proposals__list {
+      &::after {
+        @include pseudo;
+        top: 100px;
+        left: -50px;
+        height: 41px;
+        width: 1150px;
+        background-size: 1250px 41px;
+        background-position: -51px;
+      }
+    }
   }
 }
