--- a/source/sass/block/_social-list.scss
+++ b/source/sass/block/_social-list.scss
@@ -2,6 +2,36 @@
   display: flex;
   flex-direction: row;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  padding-top: 10px;
+  padding-bottom: 23px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-left: 57px;
+  padding-right: 57px;
+  align-items: center;
+
+  .social-list__item:not(:last-child) {
+    margin-right: 41px;
+  }
+
+  .social-list__item svg {
+    &:hover {
+      fill: #46c1ae;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-top: 0;
+    margin-left: 104px;
+    border-bottom: none;
+    padding-top: 5px;
+    padding-bottom: 53px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 293px;
+  }
 }
