--- a/source/sass/block/_about.scss
+++ b/source/sass/block/_about.scss
@@ -7,6 +7,7 @@
   .about__list {
     list-style: none;
     padding: 0;
+    margin-top: 18px;
   }
 
   .about__item {
@@ -16,6 +17,7 @@
     padding-top: 70px;
     padding-bottom: 13px;
     position: relative;
+    padding-right: 10px;
 
     &--eco::before {
       @include pseudo;
@@ -99,28 +101,25 @@
       line-height: 1.1;
       text-align: left;
       padding-top: 101px;
+      padding-right: 39px;
 
       &--eco::before {
         top: 50px;
       }
 
       &--style::before {
-        @include pseudo;
         top: 48px;
       }
 
       &--like::before {
-        @include pseudo;
         top: 50px;
       }
 
       &--handmade::before {
-        @include pseudo;
         top: 53px;
       }
 
       &--local::before {
-        @include pseudo;
         top: 51px;
       }
 
@@ -145,7 +144,7 @@
 
     .about__item {
       padding-top: 98px;
-      width: 250px;
+      width: 334px;
 
       &--eco::before {
         top: 44px;
