--- a/source/sass/block/_contacts.scss
+++ b/source/sass/block/_contacts.scss
@@ -27,7 +27,7 @@
       }
 
       &:active {
-        color: rgba(70, 193, 174, 0.3);
+        opacity: 0.3;
       }
 
       &:visited {
@@ -41,12 +41,18 @@
     width: 77px;
   }
 
+  .contacts__item--value {
+    display: inline-block;
+    width: 155px;
+  }
+
   .contacts__map {
     position: relative;
     width: 100%;
     min-height: 457px;
     margin-bottom: 7px;
     margin-top: 39px;
+    text-align: center;
 
     &::before {
       @include pseudo;
@@ -60,11 +66,12 @@
   }
 
   .contacts__btn {
-    margin-top: 27px;
+    margin-top: 30px;
+    font-size: 18px;
   }
 
   .contacts__container {
-    @include container320;
+    @include container;
     text-align: center;
   }
 
@@ -74,7 +81,7 @@
     margin-top: 146px;
     position: relative;
 
-    .heading {
+    .contacts__heading {
       font-size: 43px;
       line-height: 1.16;
     }
@@ -96,6 +103,11 @@
       }
     }
 
+    .contacts__item--value {
+      display: inline-block;
+      width: 230px;
+    }
+
     &::before {
       @include pseudo;
       background-image: url("../img/icon-flag.svg");
@@ -106,7 +118,7 @@
     }
 
     .contacts__container {
-      @include container768;
+      @include container;
     }
 
     .contacts__map {
@@ -121,13 +133,14 @@
     .contacts__btn {
       margin-top: 43px;
       width: 230px;
+      font-size: 17px;
     }
   }
 
   /*---------------------------------   КОНТАКТЫ - ДЕСКТОП ---------------------------------------*/
 
   @media (min-width: $desktop-width) {
-    @include container1150;
+    @include container;
     position: relative;
     margin-top: 251px;
 
@@ -140,7 +153,7 @@
       padding-left: 174px;
     }
 
-    .heading {
+    .contacts__heading {
       font-size: 53px;
       line-height: 1.08;
       margin-left: -4px;
@@ -152,7 +165,7 @@
     }
 
     .contacts__container {
-      width: 1150px;
+      width: 100%;
       text-align: left;
       padding-left: 175px;
     }
