--- a/source/sass/block/_main-nav.scss
+++ b/source/sass/block/_main-nav.scss
@@ -5,14 +5,29 @@
   background-color: transparent;
   text-align: center;
   position: relative;
-  padding-top: 22px;
+
+  .main-nav__logo {
+    display: inline-flex;
+    padding-top: 22px;
+    width: 100px;
+    margin-bottom: 19px;
+    margin-left: 13px;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
 
   .main-nav__list {
     list-style: none;
     padding: 0;
     text-align: left;
-    margin-bottom: 0;
-    display: none;  // ПЕРЕКЛЮЧАТЕЛЬ МЕНЮ
+    margin: 0;
+    display: block;  // ПЕРЕКЛЮЧАТЕЛЬ МЕНЮ
   }
 
   .main-nav__item {
@@ -55,21 +70,29 @@
     border: none;
     padding: 0;
     cursor: pointer;
+    display: inline-flex;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    position: absolute;
+    top: 24px;
+    right: 24px;
   }
 
   &--mobile-opened .main-nav__toggle {
-    top: 20px;
-    left: auto;
-    right: 0;
+    top: 24px;
+    right: 24px;
+    display: inline-block;
+    position: absolute;
 
     &::before,
     &::after {
       @include pseudo;
-      top: 37px;
-      right: 28px;
-      width: 26px;
+      top: 14px;
+      right: 2px;
       height: 2px;
-      background-color: $color-btn-border;
+      width: 26px;
+      background-color: #000000;
     }
 
     &::before {
@@ -89,19 +112,24 @@
 
   &--mobile-closed .main-nav__toggle::before {
     @include pseudo;
-    top: 30px;
-    right: 30px;
+    top: 5px;
+    right: 6px;
     width: 20px;
     height: 2px;
     background-color: #000000;
     box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
   }
 
-  &--mobile-closed .main-nav__toggle:active::before {
-    background-color: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
-  }
+  @media (max-width: $mobile-width-only) {
+    &--mobile-closed .main-nav__toggle:active::before {
+      background-color: rgba(255, 255, 255, 0.3);
+      box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
+    }
 
+    &--mobile-closed .main-nav__list {
+      display: none;
+    }
+  }
   // СТИЛИЗАЦИЯ ИКОНОК
 
   .main-nav__link--search svg,
@@ -135,6 +163,15 @@
     flex-wrap: wrap;
     padding-top: 0;
 
+    .main-nav__logo {
+      min-height: 88px;
+      width: 320px;
+      order: 1;
+      padding-top: 22px;
+      margin: 0;
+      text-align: left;
+    }
+
     .main-nav__item {
       padding-left: 0;
       border: none;
@@ -158,6 +195,8 @@
       order: 3;
       width: 339px;
       padding-left: 0;
+      z-index: 2;
+      margin-top: 18px;
     }
 
     .main-nav__list--user {
@@ -167,7 +206,7 @@
 
     .main-nav__item--catalog,
     .main-nav__item--knitting {
-      padding-top: 2px;
+      padding-top: 0;
     }
 
     .main-nav__item--basket {
@@ -183,7 +222,7 @@
 
     .main-nav__link--search svg {
       left: 36px;
-      top: -24px;
+      top: -18px;
     }
 
     .main-nav__delivery {
@@ -196,6 +235,7 @@
       font-size: 15px;
       font-weight: normal;
       line-height: 1.6;
+      z-index: 2;
     }
 
     .main-nav__item--search {
@@ -220,6 +260,14 @@
   @media (min-width: $desktop-width) {
     width: 1150px;
 
+    .main-nav__logo {
+      width: 312px;
+      order: 2;
+      text-align: center;
+      padding-top: 8px;
+      padding-left: 64px;
+    }
+
     .main-nav__list {
       margin-top: 0;
     }
@@ -227,11 +275,13 @@
     .main-nav__list--promo {
       display: flex;
       order: 4;
+      z-index: 2;
     }
 
     .main-nav__list--offer {
       order: 1;
       width: 387px;
+      z-index: 100;
     }
 
     .main-nav__list--user {
@@ -301,10 +351,6 @@
   @media (max-width: $mobile-width-only) {
     .main-nav--mobile-closed .main-nav__list {
       display: none;
-    }
-
-    .page-top--index {
-      margin-top: 44px;
     }
   }
 }
