--- a/source/sass/block/_page-footer.scss
+++ b/source/sass/block/_page-footer.scss
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 160px;
   background-color: $bg-footer;
-  margin-top: 40px;
+  margin-top: 45px;
 
   .page-footer__logo {
     display: none;
@@ -15,7 +15,7 @@
   }
 
   .page-footer__container {
-    @include container320;
+    @include container;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -31,7 +31,7 @@
     padding-top: 50px;
 
     .page-footer__container {
-      @include container768;
+      @include container;
     }
 
     .page-footer__logo {
@@ -53,7 +53,7 @@
     margin-top: 106px;
 
     .page-footer__container {
-      @include container1150;
+      @include container;
     }
   }
 }
