--- a/source/sass/block/_page-top.scss
+++ b/source/sass/block/_page-top.scss
@@ -1,4 +1,5 @@
 .page-top {
+  position: relative;
   width: 320px;
   text-align: center;
   margin: 0 auto;
@@ -7,42 +8,85 @@
 
   &--index {
     min-height: 282px;
-    background: $bg-top url("../img/hero-mobile@1x.jpg") no-repeat center top;
-
-    @include container320;
-    padding-top: 45px;
-    margin-top: 44px;
+    background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat center -18px;
+    padding-top: 70px;
     width: 100%;
   }
 
   &--catalog,
   &--form {
-    min-height: 225px;
-    background-color: $bg-top;
+    min-height: 177px;
+    background-color: $bg-footer;
+    width: 100%;
   }
-}
 
-@media (min-width: $tablet-width) {
-  .page-top {
+  &--catalog {
+    padding-top: 70px;
+  }
+
+  .page-top__heading {
+    @include container;
+  }
+
+  @media (min-width: $tablet-width) {
     &--index {
       background: $bg-top url("../img/hero-tablet@1x.jpg") no-repeat center top;
-      min-height: 772px;
       margin-top: -79px;
       padding-top: 155px;
       width: 100%;
       text-align: center;
+      position: relative;
+
+      &::after {
+        @include pseudo;
+        background-image: url("../img/bg-zigzag-fill.svg");
+        bottom: -22px;
+        left: 0;
+        height: 43px;
+        width: 100%;
+        background-size: 768px 43px;
+        background-position: 2px;
+      }
+    }
+
+    .page-top__heading {
+      @include container;
     }
 
     &--catalog,
     &--form {
       margin-top: -80px;
-      padding-top: 60px;
+      padding-top: 96px;
+      padding-bottom: 94px;
+
+      &::after {
+        @include pseudo;
+        background-image: url("../img/bg-zigzag-fill.svg");
+        left: 0;
+        bottom: -10px;
+        height: 43px;
+        width: 100%;
+        background-size: 768px 43px;
+        background-position: 2px;
+      }
     }
   }
-}
 
-@media (min-width: $desktop-width) {
-  .page-top {
+  @media (min-width: $desktop-width) {
+    &::after {
+      bottom: -20px;
+      left: 0;
+      height: 37px;
+      width: 100%;
+      background-size: 1150px 41px;
+      background-position: 50%;
+    }
+
+    &--catalog,
+    &--form {
+      min-height: 255px;
+    }
+
     .page-top__heading {
       width: 1050px;
       margin: 0 auto;
