--- a/source/sass/block/_product-card.scss
+++ b/source/sass/block/_product-card.scss
@@ -1,14 +1,45 @@
 .product-card {
   text-align: left;
-  /*
-  .product-card__text {
 
+  &:hover {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   }
 
-  .product-card__link {
+  .product-card__spec {
+    padding-top: 25px;
+    padding-left: 26px;
+    padding-right: 28px;
+    padding-bottom: 28px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
 
-  }  */
+  .product-card__basket {
+    position: absolute;
+    display: inline-block;
+    margin-left: 99px;
+    width: 42px;
+    height: 42px;
+    padding: 10px;
+    top: 12px;
+    right: -14px;
+    opacity: 0.2;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+
+    &:hover svg {
+      fill: #63d1bb;
+    }
+  }
+
   .product-card__name {
+    color: $color-text-main;
+
     &:hover {
       color: $color-text-main-hover;
     }
@@ -19,46 +50,108 @@
   }
 
   .product-card__discription {
+    display: block;
     font-size: 13px;
     font-weight: normal;
-    line-height: 2.31;
+    line-height: 2.2;
+    margin-top: 8px;
+    padding-bottom: 19px;
   }
-  /*
-  .product-card__buy {
-
-  }*/
 
   .product-card__price {
+    display: inline-block;
     font-size: 15px;
     font-weight: 700;
     line-height: 1.6;
+    padding-top: 21px;
+    width: 80px;
   }
-  /*
-  .product-card__basket {
 
-  } */
-}
+  .product-card__img {
+    vertical-align: bottom;
+  }
 
-@media (min-width: $tablet-width) {
-  .product-card {
+  .product-card__buy {
+    position: relative;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+
+    .product-card__link {
+      min-width: 334px;
+    }
+
+    .product-card__name {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1.2;
+    }
+
+    .product-card__spec {
+      width: 334px;
+    }
+
+    .product-card__text {
+      display: inline-block;
+      min-height: 200px;
+    }
+
+    .product-card__discription {
+      font-size: 15px;
+      line-height: 2;
+      margin-top: 5px;
+    }
+
+    .product-card__price {
+      font-size: 17px;
+      line-height: 1.41;
+      padding-left: 6px;
+      width: 100px;
+    }
+
+    .product-card__basket {
+      margin-left: 131px;
+      right: -10px;
+    }
+
+    .product-card__buy {
+      margin-top: 34px;
+    }
   }
 
-  .product-card__link {
-    min-width: 334px;
-  }
-}
+  @media (min-width: $desktop-width) {
+    .product-card {
+      display: flex;
+      flex-direction: column;
+    }
 
-@media (min-width: $desktop-width) {
-  .product-card {
-    display: flex;
-    flex-direction: column;
-  }
+    .product-card__link {
+      min-width: 316px;
+      min-height: 462px;
+    }
 
-  .product-card__link {
-    width: 316px;
-    min-height: 462px;
-    background-color: aqua;// временно
+    .product-card__spec {
+      width: 316px;
+    }
+
+    .product-card__buy {
+      margin-top: 0;
+    }
+
+    .product-card__text {
+      min-height: 97px;
+    }
+
+    .product-card__discription {
+      padding-bottom: 0;
+    }
+
+    .product-card__price {
+      padding-left: 0;
+    }
   }
 }
