--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -28,6 +28,8 @@ $color-btn-add2-hover: #46c1ae;
 $tablet-width: 768px;
 $desktop-width: 1150px;
 $mobile-width-only: 767px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
 
 /*
 $blue-base: #66ccff;
