--- a/source/sass/block/_social-list.scss
+++ b/source/sass/block/_social-list.scss
@@ -27,8 +27,8 @@
     margin-top: 0;
     margin-left: 104px;
     border-bottom: none;
-    padding-top: 5px;
-    padding-bottom: 53px;
+    padding-top: 0;
+    padding-bottom: 42px;
   }
 
   @media (min-width: $desktop-width) {
