--- a/source/sass/block/_catalog.scss
+++ b/source/sass/block/_catalog.scss
@@ -1,6 +1,6 @@
 
 .catalog {
-  margin-bottom: 63px;
+  padding-bottom: 55px;
 
   .catalog__heading {
     @include container;
@@ -26,6 +26,8 @@
   }
 
   @media (min-width: $tablet-width) {
+    padding-bottom: 63px;
+
     .catalog__list {
       margin-top: 66px;
       margin-bottom: 0;
@@ -39,6 +41,8 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-bottom: 105px;
+
     .catalog__list {
       display: flex;
       justify-content: space-between;
