--- a/source/sass/block/_page-footer.scss
+++ b/source/sass/block/_page-footer.scss
@@ -4,7 +4,6 @@
   width: 100%;
   min-height: 160px;
   background-color: $bg-footer;
-  margin-top: 45px;
 
   .page-footer__logo {
     display: none;
@@ -27,8 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 58px;
-    padding-top: 50px;
+    padding-top: 51px;
 
     .page-footer__container {
       @include container;
@@ -50,7 +48,7 @@
   /*--------------------------------- ФУТЕР - ДЕСКТОП ---------------------------------------*/
 
   @media (min-width: $desktop-width) {
-    margin-top: 106px;
+    margin-top: 0;
 
     .page-footer__container {
       @include container;
