--- a/source/sass/block/_form.scss
+++ b/source/sass/block/_form.scss
@@ -117,6 +117,21 @@
   .form__tel,
   .form__email {
     width: 100%;
+    position: relative;
+  }
+
+  .form__control--phone-svg {
+    @include pseudo;
+    bottom: 17px;
+    right: 8px;
+    opacity: 0.2;
+  }
+
+  .form__control--mail-svg {
+    @include pseudo;
+    bottom: 10px;
+    right: 3px;
+    opacity: 0.2;
   }
 
   .form__field--tel {
@@ -229,6 +244,7 @@
 
       &:active + .form__label--radio::before {
         border: 2px solid #444444;
+        opacity: 0.3;
       }
     }
 
@@ -239,6 +255,7 @@
 
       &:active + .form__label--checkbox::before {
         border: 2px solid #444444;
+        opacity: 0.3;
       }
     }
 
@@ -269,9 +286,19 @@
     display: block;
   }
 
-  .form__control:hover {
+  .form__control:hover,
+  .form__control:focus {
     box-shadow: inset 0 -2px 0 0 #62d1ba;
     border-bottom: 2px solid #62d1ba;
+    outline: none;
+  }
+
+  .form__control:hover + .form__control--phone-svg,
+  .form__control:hover + .form__control--mail-svg,
+  .form__control:focus + .form__control--phone-svg,
+  .form__control:focus + .form__control--mail-svg {
+    fill: #62d1ba;
+    opacity: 1;
   }
 
   .form__textarea {
@@ -288,15 +315,10 @@
 
       &:hover,
       &:focus {
-        box-shadow: inset 0 -2px 0 0 #000000;
         border: solid 2px #62d1ba;
+        outline: none;
       }
     }
-  }
-
-  .form__wrapper {
-    width: 668px;
-    margin: 0 auto;
   }
 
   .form__filling {
@@ -311,7 +333,6 @@
 
   .form__btn {
     display: block;
-    background-color: #ffffff;
     padding-top: 3px;
     margin: 30px 0 55px 0;
   }
@@ -554,6 +575,19 @@
       margin-top: 23px;
       margin-bottom: 0;
     }
+
+    .form__control--phone-svg {
+      right: 26px;
+    }
+
+    .form__control--mail-svg {
+      right: 22px;
+    }
+
+    .form__wrapper {
+      width: 668px;
+      margin: 0 auto;
+    }
   }
 
   /*--------------------------------- FORM/ФОРМА - ДЕСКТОП ---------------------------------------*/
@@ -649,6 +683,15 @@
         width: 700px;
         margin-left: 74px;
       }
+    }
+
+    .form__control--phone-svg {
+      right: 183px;
+    }
+
+    .form__control--mail-svg {
+      right: 180px;
+      bottom: 8px;
     }
   }
 }
