--- a/source/sass/block/_copyright.scss
+++ b/source/sass/block/_copyright.scss
@@ -3,8 +3,10 @@
 .copyright {
   display: flex;
   margin: 0 auto;
-  padding-top: 10px;
+  padding-top: 14px;
   vertical-align: baseline;
+  width: 183px;
+  height: 50px;
 
   &:hover .copyright__logo {
     fill: #46c1ae;
@@ -33,12 +35,11 @@
     margin-left: 0;
     justify-content: flex-end;
     width: 207px;
-    padding-top: 11px;
+    padding-top: 14px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 45px;
-    width: 399px;
     padding-top: 10px;
+    margin-left: 193px;
   }
 }
