--- a/source/sass/block/_form.scss
+++ b/source/sass/block/_form.scss
@@ -8,7 +8,7 @@
     font-size: 13px;
     line-height: 1.85;
     text-align: left;
-    padding: 20px 0 10px 0;
+    padding: 22px 0 10px 0;
     margin: 0;
   }
 
@@ -36,7 +36,7 @@
       display: flex;
       flex-direction: column;
       width: 320px;
-      padding: 0 30px 8px 30px;
+      padding: 0 30px 4px 30px;
     }
 
     &--tel {
@@ -54,7 +54,7 @@
     &--textarea {
       display: flex;
       width: 320px;
-      padding: 0 30px 7px 30px;
+      padding: 0 30px 12px 30px;
     }
   }
 
@@ -139,7 +139,7 @@
   }
 
   .form__field--textarea {
-    margin-bottom: 3px;
+    margin-bottom: 7px;
 
     &::after {
       @include pseudo;
@@ -234,7 +234,7 @@
     border-left: none;
     border-right: none;
     width: 100%;
-    color: rgba(68, 68, 68, 0.3);
+    color: #444444;
     font-weight: 200;
 
     &--radio {
@@ -262,22 +262,24 @@
     &--text {
       font-size: 17px;
       line-height: 1.06;
-      padding-bottom: 14px;
-      margin-bottom: 10px;
+      padding-bottom: 13px;
+      margin-bottom: 14px;
+      padding-right: 10px;
     }
 
     &--tel {
-      font-size: 17px;
-      line-height: 1.06;
+      font-size: 19px;
+      line-height: 0.95;
       padding-top: 0;
       padding-bottom: 14px;
+      padding-right: 40px;
     }
 
     &--email {
       font-size: 17px;
       line-height: 1.06;
-      padding-top: 5px;
-      padding-bottom: 14px;
+      padding-top: 6px;
+      padding-bottom: 16px;
     }
   }
 
@@ -288,7 +290,6 @@
 
   .form__control:hover,
   .form__control:focus {
-    box-shadow: inset 0 -2px 0 0 #62d1ba;
     border-bottom: 2px solid #62d1ba;
     outline: none;
   }
@@ -308,9 +309,9 @@
       font-size: 17px;
       line-height: 1.06;
       width: 100%;
-      padding: 17px;
+      padding: 14px;
       border: 2px solid #444444;
-      margin-top: 0x;
+      margin-top: 0;
       min-height: 142px;
 
       &:hover,
@@ -335,6 +336,12 @@
     display: block;
     padding-top: 3px;
     margin: 30px 0 55px 0;
+  }
+
+  input[type="text"]::placeholder,
+  input[type="tel"]::placeholder,
+  input[type="email"]::placeholder {
+    color: rgba(68, 68, 68, 0.3);
   }
 
   /*--------------------------------- FORM/ФОРМА - ПЛАНШЕТ ---------------------------------------*/
@@ -419,8 +426,8 @@
           height: 22px;
           background-color: #62d1ba;
           border-radius: 50%;
-          top: 22px;
-          left: 16px;
+          top: 23px;
+          left: 15px;
         }
       }
 
@@ -501,20 +508,20 @@
       font-size: 19px;
       line-height: 0.95;
       font-weight: 400;
-      color: rgba(68, 68, 68, 0.3);
 
       &--text {
         padding-left: 22px;
-        padding-bottom: 16px;
+        padding-bottom: 13px;
         width: 100%;
       }
 
       &--tel,
       &--email {
         margin-left: 109px;
-        padding-bottom: 13px;
+        padding-bottom: 12px;
         background-color: #f1f1f1;
         padding-left: 15px;
+        padding-right: 60px;
       }
     }
 
@@ -549,7 +556,7 @@
       &--tel,
       &--email {
         display: inline-block;
-        width: 80px;
+        width: 84px;
       }
 
       &--textarea {
@@ -572,7 +579,7 @@
 
     .form__btn {
       width: 230px;
-      margin-top: 23px;
+      margin-top: 22px;
       margin-bottom: 0;
     }
 
