--- a/source/sass/block/_contacts.scss
+++ b/source/sass/block/_contacts.scss
@@ -53,7 +53,7 @@
     width: 100%;
     min-height: 457px;
     margin-bottom: 7px;
-    margin-top: 39px;
+    margin-top: 33px;
     text-align: center;
 
     &::before {
@@ -101,10 +101,10 @@
       font-size: 17px;
       line-height: 1.76;
       display: inline-flex;
-      width: 340px;
 
       &:first-child {
         display: block;
+        padding-right: 54px;
       }
 
       &--address {
@@ -114,6 +114,10 @@
 
       &--email {
         width: 200px;
+      }
+
+      &--title {
+        width: 74px;
       }
     }
 
@@ -183,7 +187,7 @@
     }
 
     .contacts__btn {
-      margin-top: 52px;
+      margin-top: 55px;
       margin-left: 125px;
     }
 
