--- a/source/sass/block/_font-face.scss
+++ b/source/sass/block/_font-face.scss
@@ -3,6 +3,7 @@
   font-weight: normal;
   font-style: normal;
   src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,4 +11,5 @@
   font-weight: 700;
   font-style: normal;
   src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
+  font-display: swap;
 }
